--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "LUMI多语言AI翻译助手",
+  "name": "lumitrans",
 "id": "1532649489372583234",
   "documentAccess": "dynamic-page",
   "api": "1.0.0",
